# CBS_Python_1903

./: .gitignore  README.md  pyproject.toml  sandbox.py
Module_1/lesson_1/: examples.py
Module_1/lesson_10/: another_file.py  learn_import.py  standart_pep8.py
Module_1/lesson_2/: boolean_example.py  conclusions.py  numbers_types.py  operations_with_numbers.py  tipization.py
Module_1/lesson_3/: conditions.py  conditions_2.py  conditions_with_elif.py  match_case.py  ternary.py
Module_1/lesson_4/: diapason_range.py  for_else.py  nested_loops.py  while_else.py
Module_1/lesson_5/: index_access.py  tuple.py  tuple_in_loops.py  tuple_operations.py
Module_1/lesson_6/: example.py  list_type.py  mutable_immutable.py
Module_1/lesson_7/: set_type.py
Module_1/lesson_8/: args_and_kwargs.py  functions.py  functions_with_arguments_2.py  named_arguments.py  optional_arguments.py  return_result.py
Module_1/lesson_9/: homework.py  recursion.py  scope.py
Module_3/lesson_1/: animals.py  class_decorators.py  constructor_method.py  dunder_methods.py  learn_class.py
hw_dir_12/: task1.py  task_2.py
lesson_1/: examples_2.py
lesson_2/: boolean_operators.py  string_formatting.py  string_operations.py
lesson_3/: examples.py  match_case_2.py  types_to_bool.py
lesson_4/: break_continue.py  for_loop.py  practice.py  while_loop.py
lesson_5/: example.py  practice.py
lesson_6/: example_2.py  list_methods.py  list_operations.py
lesson_7/: dict_methods.py  dict_type.py  set_methods.py  set_methods_2.py
lesson_8/: functions_with_arguments.py
lesson_9/: documentation.py
(+143 files in other folders)
